--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
             <div class="left-section">
                 <!-- About Section -->
                 <section id="about" class="section">
-                    <h2>Welcome to Data Spectre</h2>
+                        <h2>Welcome to Data Spectre</h2>
+                        <p>
+                          <a href="https://twitter.com/YourTwitterHandle" target="_blank">Twitter</a>
+                        </p>
+                        <p>
+                          <a href="https://t.me/YourTelegramChannel" target="_blank">Telegram</a>
+                        </p>
                     <p> hidden layers of data where AI reveals what’s not immediately visible. Discover patterns and insights that aren't easily found. Are you ready to see beyond the surface?</p>
                 </section>
 
