--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- 3D About Section -->
     <div class="about-3d-container">
-        <a href="https://twitter.com/your_twitter_handle" class="pumpfun-button" target="_blank">
+        <a href="https://x.com/gettingscary" class="pumpfun-button" target="_blank">
             <img src="66b48f1d57f0aa72f1f621e6_Pumpfun Logo.png" alt="Pumpfun Logo" class="pumpfun-logo">
         </a>
     </div>
