--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Starry Night Background -->
-    <div id="starry-background"></div>
+    <div id="starry-background"></div
 
     <!-- Header Section -->
     <header class="header">
@@ -24,7 +24,7 @@
 
     <!-- 3D About Section -->
     <div class="about-3d-container">
-        <a href="https://x.com/gettingscary" class="pumpfun-button" target="_blank">
+        <a href="https://x.com/data_spectre" class="pumpfun-button" target="_blank">
             <img src="66b48f1d57f0aa72f1f621e6_Pumpfun Logo.png" alt="Pumpfun Logo" class="pumpfun-logo">
         </a>
     </div>
@@ -39,10 +39,10 @@
                 <section id="about" class="section">
                         <h2>Welcome to Data Spectre</h2>
                         <p>
-                          <a href="https://twitter.com/YourTwitterHandle" target="_blank">Twitter</a>
+                          <a href="https://twitter.com/data_spectr" target="_blank">Twitter</a>
                         </p>
                         <p>
-                          <a href="https://t.me/YourTelegramChannel" target="_blank">Telegram</a>
+                          <a href="https://t.me/https://t.me/+tBBAtKLNN3czMTE0" target="_blank">Telegram</a>
                         </p>
                     <p> hidden layers of data where AI reveals what’s not immediately visible. Discover patterns and insights that aren't easily found. Are you ready to see beyond the surface?</p>
                 </section>
