--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <section id="about" class="section">
                         <h2>Welcome to Data Spectre</h2>
                         <p>
-                          <a href="https://twitter.com/data_spectr" target="_blank">Twitter</a>
+                          <a href="https://twitter.com/data_spectre" target="_blank">Twitter</a>
                         </p>
                         <p>
                           <a href="https://t.me/https://t.me/+tBBAtKLNN3czMTE0" target="_blank">Telegram</a>
